# clvm_tools_rs

./: Cargo.toml  index.html  repl.html  repl.js
.github/workflows/: build-arm64-wheels.yml  build-m1-wheel.yml  build-test.yml
css/: main.css
mock-test/: Makefile  webpack.config.js
repl/: Makefile  index.js  package.json  util.js  webpack.config.js
src/: lib.rs
src/classic/bins/: brun.rs  cldb.rs  opc.rs  opd.rs  opt.rs  run.rs  sha256tree.rs
src/classic/clvm/: as_rust.rs  casts.rs  serialize.rs  sexp.rs
src/classic/clvm_tools/: binutils.rs  clvmc.rs  cmds.rs  debug.rs  pattern_match.rs  sha256tree.rs
src/classic/clvm_tools/stages/: mod.rs  stage_0.rs
src/classic/clvm_tools/stages/stage_2/: compile.rs  defaults.rs  helpers.rs  module.rs  operators.rs  optimize.rs
src/compiler/: clvm.rs  codegen.rs  compiler.rs  comptypes.rs  evaluate.rs  frontend.rs  fuzzer.rs  inline.rs  mod.rs  offsetwriter.rs  optimize.rs  sexp.rs  srcloc.rs  symbols.rs  tlaplus.rs
src/new/bins/: fuzz.rs
src/tests/classic/: run.rs  smoke.rs
src/tests/compiler/: clvm.rs  compiler.rs  mod.rs  offsetwriter.rs
workspace/native/: Cargo.toml
workspace/python-extension/: Cargo.toml
workspace/python-extension/src/: lib.rs
workspace/python-extension/src/py/: api.rs
